fix dropdown to flex direction column on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -168,4 +168,10 @@ ul.footer-socials{
   h2 {
     font-size: 16px;
   }
+  .dropdown{
+    flex-direction: column;
+  }
+  .dropdown h3{
+    padding-bottom: 8px;
+  }
 }
